tests/invalid/variables/var_declared_late.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    a = 1 + 2;
    a: i64;
    return a;
}